test/error/FieldVoid.fu
public class Test
{
	void Foo; //ERROR: Field cannot be void
}
